Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-18878

Purge is slow due to repeatedly looking up missing or discarded table

    XMLWordPrintable

Details

    Description

      The tests innodb.undo_truncate and innodb.full_crc32_import are occasionally failing due to not all transactions having been purged. This is deterministically repeatable on a slow VM when running an ASAN-instrumented executable.

      The reason for this is that the purge worker threads are unnecessarily issuing repeated lookups for tables that have been dropped, rebuilt or discarded. The threads should remember the latest failed lookup, so that unnecessary contention on the InnoDB dict_sys->mutex and dict_operation_lock and the buffer pool pages for SYS_TABLES can be avoided.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 7h
                  1d 7h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.