storage/innobase/row/row0purge.cc
@@ -1,7 +1,7 @@
 /*****************************************************************************
 
 Copyright (c) 1997, 2017, Oracle and/or its affiliates. All Rights Reserved.
-Copyright (c) 2017, 2018, MariaDB Corporation.
+Copyright (c) 2017, 2019, MariaDB Corporation.
 
 This program is free software; you can redistribute it and/or modify it under
 the terms of the GNU General Public License as published by the Free Software
@@ -56,31 +56,6 @@ that we MUST not hold any synchonization objects when performing the
 check.
 If you make a change in this module make sure that no codepath is
 introduced where a call to log_free_check() is bypassed. */
-
-/** Create a purge node to a query graph.
-@param[in]	parent	parent node, i.e., a thr node
-@param[in]	heap	memory heap where created
-@return own: purge node */
-purge_node_t*
-row_purge_node_create(
-	que_thr_t*	parent,
-	mem_heap_t*	heap)
-{
-	purge_node_t*	node;
-
-	ut_ad(parent != NULL);
-	ut_ad(heap != NULL);
-
-	node = static_cast<purge_node_t*>(
-		mem_heap_zalloc(heap, sizeof(*node)));
-
-	node->common.type = QUE_NODE_PURGE;
-	node->common.parent = parent;
-	node->done = TRUE;
-	node->heap = mem_heap_create(256);
-
-	return(node);
-}
 
 /***********************************************************//**
 Repositions the pcur in the purge node on the clustered index record,
@@ -966,7 +941,6 @@ row_purge_parse_undo_rec(
 	byte*		ptr;
 	undo_no_t	undo_no;
 	table_id_t	table_id;
-	trx_id_t	trx_id;
 	roll_ptr_t	roll_ptr;
 	ulint		info_bits;
 	ulint		type;
@@ -980,15 +954,14 @@ row_purge_parse_undo_rec(
 
 	node->rec_type = type;
 
-	if (type == TRX_UNDO_UPD_DEL_REC && !*updated_extern) {
-
-		return(false);
+	if ((type == TRX_UNDO_UPD_DEL_REC && !*updated_extern)
+	    || node->is_skipped(table_id)) {
+		node->table = NULL;
+		return false;
 	}
 
-	ptr = trx_undo_update_rec_get_sys_cols(ptr, &trx_id, &roll_ptr,
+	ptr = trx_undo_update_rec_get_sys_cols(ptr, &node->trx_id, &roll_ptr,
 					       &info_bits);
-	node->table = NULL;
-	node->trx_id = trx_id;
 
 	/* Prevent DROP TABLE etc. from running when we are doing the purge
 	for this row */
@@ -999,15 +972,18 @@ try_again:
 	node->table = dict_table_open_on_id(
 		table_id, FALSE, DICT_TABLE_OP_NORMAL);
 
+	trx_id_t trx_id;
+
 	if (node->table == NULL) {
 		/* The table has been dropped: no need to do purge */
+		trx_id = TRX_ID_MAX;
 		goto err_exit;
 	}
 
 	ut_ad(!dict_table_is_temporary(node->table));
 
 	if (!fil_table_accessible(node->table)) {
-		goto close_exit;
+		goto inaccessible;
 	}
 
 	if (node->table->n_v_cols && !node->table->vc_templ
@@ -1036,11 +1012,20 @@ try_again:
 		/* The table was corrupt in the data dictionary.
 		dict_set_corrupted() works on an index, and
 		we do not have an index to call it with. */
+inaccessible:
+		DBUG_ASSERT(table_id == node->table->id);
+		trx_id = node->table->def_trx_id;
+		if (!trx_id) {
+			trx_id = TRX_ID_MAX;
+		}
 close_exit:
 		dict_table_close(node->table, FALSE, FALSE);
 		node->table = NULL;
 err_exit:
 		rw_lock_s_unlock(dict_operation_lock);
+		if (table_id) {
+			node->skip(table_id, trx_id);
+		}
 		return(false);
 	}
 
@@ -1049,13 +1034,15 @@ err_exit:
 	    && !*updated_extern) {
 
 		/* Purge requires no changes to indexes: we may return */
+		table_id = 0;
 		goto close_exit;
 	}
 
 	ptr = trx_undo_rec_get_row_ref(ptr, clust_index, &(node->ref),
 				       node->heap);
 
-	ptr = trx_undo_update_rec_get_update(ptr, clust_index, type, trx_id,
+	ptr = trx_undo_update_rec_get_update(ptr, clust_index, type,
+					     node->trx_id,
 					     roll_ptr, info_bits,
 					     node->heap, &(node->update));
 
